🐛 fix(toggles): Slider element not aligning correctly when alone.

--- a/assets/scss/shared-ui/_toggles.scss
+++ b/assets/scss/shared-ui/_toggles.scss
@@ -105,6 +105,11 @@
 				transition: 0.2s linear;
 			}
 
+			&:last-child,
+			&.sui-toggle-slider--only {
+				position: relative;
+			}
+
 			~ .sui-toggle-label,
 			~ .sui-description {
 				margin-left: #{$toggle-width + math.div($sui-gutter-md, 2)};
